[gd_scene load_steps=10 format=2]

[ext_resource path="res://Script/Menu e Intro/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/background/inicio.PNG" type="Texture" id=2]
[ext_resource path="res://sprites/object/play.png" type="Texture" id=3]
[ext_resource path="res://sprites/object/controles.png" type="Texture" id=4]
[ext_resource path="res://sprites/object/CREDITOS.png" type="Texture" id=5]
[ext_resource path="res://sprites/object/sairr.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Others/Creditos.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Others/Controles.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]

resource_name = "start"
length = 5.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Control" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="Play" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 470.0
margin_top = 315.0
margin_right = 600.0
margin_bottom = 345.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
expand = true

[node name="Controles" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 470.0
margin_top = 347.0
margin_right = 600.0
margin_bottom = 377.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="Creditos" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 470.0
margin_top = 379.0
margin_right = 600.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="Sair" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 470.0
margin_top = 412.0
margin_right = 600.0
margin_bottom = 442.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="Vers√£o" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 930.0
margin_top = 490.0
margin_right = 1017.0
margin_bottom = 504.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "v0.0.2.1 BETA"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Margin" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/start = SubResource( 1 )
blend_times = [  ]

[node name="Control" parent="." index="7" instance=ExtResource( 7 )]

[node name="Control2" parent="." index="8" instance=ExtResource( 8 )]

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="Controles" to="." method="_on_Controles_pressed"]

[connection signal="pressed" from="Creditos" to="." method="_on_Creditos_pressed"]

[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]


